# CalculateImagesOverlapInHDMap

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: fisheye.json  fisheye.yaml
config/blender/: blender.yaml
config/euroc/: euroc_config.yaml
data/blender/: select_pose.txt
include/: DataLoader.hpp
include/camera_models/: CameraFactory.h  EquidistantCamera.h
src/: BuildMapByPoseDepth.cpp  CalFisheyeOverlap_Euroc.cpp  CalImagesOverlapInHDMap_Euroc.cpp  CalculateImagesOverlapInHDMap.cpp  Registration2DGridMapWith3DMap.cpp
src/camera_models/: CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
